# ff_ai_assistant

./: .env.example  .gitignore  README.md  golden_queries.json  pyproject.toml
.cmux/: setup
.github/workflows/: ci.yml
data/: processed
notebooks/: 01_data_exploration.ipynb  05_build_dataset_exploration.ipynb
scripts/: fetch_stats.py
src/ff_ai_assistant/: __init__.py  adp_expectation.py  config.py  database.py  ingest.py  sql_chain.py  utils.py
tests/: test_adp_expectation.py  test_config.py  test_database.py  test_ingest.py  test_sql_chain.py  test_utils.py
