[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ff_ai_assistant"]

[project]
name = "ff_ai_assistant"
version = "0.2.0"
description = "ML-powered fantasy football assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-chroma",
    "langchain-groq",
    "langchain-ollama",
    "chromadb>=1.5.5",  # 1.5.2 and older break on Python 3.14 + Pydantic 2.12+ (chroma #5996)
    "sentence-transformers",
    "nflreadpy",
    "python-dotenv",
    "pytest",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "duckdb>=1.3.0",
    "polars>=1.38.1",
    "langchain-text-splitters>=1.1.1",
    "bs4>=0.0.2",
    "ipywidgets>=8.1.8",
    "langchain-huggingface>=1.2.1",
    "torch",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
